@@ -27,6 +27,9 @@
       }
     </script>
     <script>
+    if (window.layoutTestController)
+        layoutTestController.overridePreference("WebKitWebGLEnabled", "1");
+
     var gl = null;
 
     function draw()
